2008-07-02  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

Reviewed by Darin.

        Bug 19776: Number.toExponential() is incorrect for numbers between 0.1 and 1
        <https://bugs.webkit.org/show_bug.cgi?id=19776>

        Perform the sign check for the exponent on the actual exponent value,
        which is 1 less than the value of decimalPoint, instead of on the value
        of decimalPoint itself.

        JavaScriptCore:

        * kjs/NumberPrototype.cpp:
        (KJS::exponentialPartToString):

        LayoutTests:

        * fast/js/number-toExponential-expected.txt:
        * fast/js/resources/number-toExponential.js:


Canonical link: https://commits.webkit.org/27404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@34961 268f45cc-cd09-0410-ab3c-d52691b4dbfc